# m3u8downloader_rust

./: Cargo.toml  README.md  README_zh.md  build.rs
lang/zh/LC_MESSAGES/: m3u8downloader.po
src/: downloader.rs  lib.rs  main.rs
ui/: app-window.slint  common.slint  input-txt.slint
