[package]
name = "m3u8downloader"
version = "0.1.3"
edition = "2024"

[dependencies]
async-compat = "0.2.5"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["stream"] }
rfd = "0.17.2"
slint = { version = "1.16.1", default-features = false, features = ["std", "compat-1-2", "backend-default", "renderer-femtovg"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "fs", "process"] }
url = "2.5.8"
winsafe = { version = "0.0.27", features = ["user"] }
futures = { version = "0.3", default-features = false }
once_cell = "1.21.4"
dashmap = "6.1.0"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
debug = false
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
